--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!-- #region head -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,11 +10,518 @@
     <title>Title</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/style.scss"
     />
   </head>
+  <!-- #endregion -->
   <body>
-    <h1>Hello Mate Academy</h1>
+    <div class="wrapper">
+      <!-- #region header -->
+      <header class="header">
+        <div class="header__container">
+          <button
+            type="button"
+            class="header__icon icon-menu"
+          >
+            <span></span>
+          </button>
+        </div>
+
+        <div class="header__menu">
+          <div class="menu">
+            <div class="menu__container">
+              <nav class="menu__navigation navigation">
+                <ul class="navigation__list">
+                  <li class="navigation__item">
+                    <a
+                      href="#galery"
+                      class="navigation__link"
+                    >
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="navigation__item">
+                    <a
+                      href="#about"
+                      class="navigation__link"
+                    >
+                      Про Нас
+                    </a>
+                  </li>
+                  <li class="navigation__item">
+                    <a
+                      href="#events"
+                      class="navigation__link"
+                    >
+                      Виставки та події
+                    </a>
+                  </li>
+                  <li class="navigation__item">
+                    <a
+                      href="#contacts"
+                      class="navigation__link"
+                    >
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+
+              <div class="menu__info">
+                <div class="menu__schedule schedule">
+                  <h4 class="schedule__title">Графік роботи</h4>
+
+                  <ul class="schedule__list">
+                    <li class="schedule__item">
+                      <span class="schedule__hours">12:00 — 20:00</span>
+                      середа
+                    </li>
+                    <li class="schedule__item">
+                      <span class="schedule__hours">12:00 — 20:00</span>
+                      четвер
+                    </li>
+                    <li class="schedule__item">
+                      <span class="schedule__hours">12:00 — 20:00</span>
+                      п’ятниця
+                    </li>
+                    <li class="schedule__item">
+                      <span class="schedule__hours">11:00 — 19:00</span>
+                      субота
+                    </li>
+                    <li class="schedule__item">
+                      <span class="schedule__hours">11:00 — 19:00</span>
+                      неділя
+                    </li>
+                  </ul>
+
+                  <div class="schedule__non-working">
+                    <p class="schedule__text">
+                      <span class="schedule__days">Вихідні:</span>
+                      понеділок, вівторок
+                    </p>
+
+                    <p class="schedule__text">
+                      Каса припиняє роботу за 1 годину до закриття музею
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- #endregion -->
+      <main class="page">
+        <!-- #region main-section -->
+        <section
+          id="home"
+          class="page__main main"
+        >
+          <div class="main__container">
+            <div class="main__image">
+              <a
+                href="#home"
+                class="main__logo"
+              >
+                <img
+                  src="./images/logo.svg"
+                  alt="logo"
+                />
+              </a>
+
+              <img
+                src="./images/main/museum.png"
+                alt="museum"
+              />
+            </div>
+
+            <div class="main__content">
+              <h1 class="main__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+              <a
+                href="#"
+                class="main__link link-tickets"
+              >
+                <p class="link-tickets__text">КВИТКИ</p>
+                <div class="button _icon-arrow"></div>
+              </a>
+            </div>
+          </div>
+        </section>
+        <!-- #endregion -->
+
+        <section
+          id="events"
+          class="page__events events"
+        >
+          <div class="events__container">
+            <h2 class="events__title title">Актуальні події</h2>
+
+            <div class="events__items">
+              <article class="events__item event">
+                <div class="event__poster">
+                  <img
+                    src="./images/events/1.png"
+                    alt="Йду і повертаюсь"
+                  />
+                </div>
+
+                <div class="event__card">
+                  <div class="event__info info-event">
+                    <p class="info-event__category">ВИСТАВКА</p>
+                    <p class="info-event__date">26.08-29.11.2019</p>
+                  </div>
+
+                  <h3
+                    class="event__name sub-title sub-title--icon _icon-rectangle"
+                  >
+                    Йду і повертаюсь
+                  </h3>
+
+                  <p class="event__description">
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку - українське мистецтво другої
+                    половини 1980-1995 років.
+                  </p>
+                </div>
+              </article>
+
+              <article class="events__item event">
+                <div class="event__poster">
+                  <img
+                    src="./images/events/2.png"
+                    alt="І спогади і мрії"
+                  />
+                </div>
+
+                <div class="event__card">
+                  <div class="event__info info-event">
+                    <p class="info-event__category">ВИСТАВКА</p>
+                    <p class="info-event__date">26.08-29.11.2019</p>
+                  </div>
+
+                  <h3
+                    class="event__name sub-title sub-title--icon _icon-rectangle"
+                  >
+                    І спогади і мрії
+                  </h3>
+
+                  <p class="event__description">
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </section>
+
+        <section class="page__lecture lecture">
+          <div class="lecture__container">
+            <div class="lecture__card">
+              <div class="lecture__info info-event">
+                <p class="info-event__category">ЛЕКЦІЯ</p>
+                <p class="info-event__date">26/08/2019 - 11:00</p>
+              </div>
+
+              <h3 class="lecture__title sub-title">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </div>
+        </section>
+
+        <section
+          id="galery"
+          class="page__galery-block galery-block"
+        >
+          <div class="galery-block__container">
+            <h2 class="galery-block__title title">Галерея</h2>
+
+            <div class="galery-block__galery galery">
+              <a
+                href="#"
+                class="galery__item galery__item--1"
+              >
+                <img
+                  src="./images/galery-block/01.png"
+                  alt="galery-image"
+                />
+              </a>
+
+              <a
+                href="#"
+                class="galery__item galery__item--2"
+              >
+                <img
+                  src="./images/galery-block/02.png"
+                  alt="galery-image"
+                />
+              </a>
+
+              <a
+                href="#"
+                class="galery__item galery__item--3"
+              >
+                <img
+                  src="./images/galery-block/03.png"
+                  alt="galery-image"
+                />
+              </a>
+
+              <a
+                href="#"
+                class="galery__item galery__item--4"
+              >
+                <img
+                  src="./images/galery-block/04.png"
+                  alt="galery-image"
+                />
+              </a>
+            </div>
+
+            <div class="pagging">
+              <ul class="pagging__list">
+                <li>
+                  <a
+                    href="#"
+                    class="pagging__item _icon-ellipse pagging__item--active"
+                  ></a>
+                </li>
+
+                <li>
+                  <a
+                    href="#"
+                    class="pagging__item _icon-ellipse"
+                  ></a>
+                </li>
+
+                <li>
+                  <a
+                    href="#"
+                    class="pagging__item _icon-ellipse"
+                  ></a>
+                </li>
+
+                <li>
+                  <a
+                    href="#"
+                    class="pagging__item _icon-ellipse"
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <section
+          id="about"
+          class="page__subscribe subscribe"
+        >
+          <div class="subscribe__container">
+            <h2 class="subscribe__title title">Підписка</h2>
+
+            <p class="subscribe__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              action="#"
+              method="post"
+              class="subscribe__form form"
+              onsubmit="event.preventDefault(); this.reset()"
+            >
+              <input
+                type="email"
+                name="email"
+                required
+                placeholder="E-mail"
+                class="form__input input"
+              />
+
+              <button
+                type="submit"
+                class="form__button button button--orange _icon-arrow"
+              ></button>
+            </form>
+          </div>
+        </section>
+      </main>
+
+      <footer class="footer">
+        <div class="footer__container">
+          <div class="footer__links">
+            <a
+              href="#"
+              class="footer__logo"
+            >
+              <img
+                src="./images/logo.svg"
+                alt="logo"
+              />
+            </a>
+
+            <div class="footer__socials">
+              <a
+                href="https://www.facebook.com/?locale=uk_UA"
+                target="_blank"
+                class="footer__social _icon-facebook"
+              ></a>
+
+              <a
+                href="https://www.instagram.com"
+                target="_blank"
+                class="footer__social _icon-instagram"
+              ></a>
+            </div>
+          </div>
+
+          <div class="footer__schedule schedule">
+            <h4 class="schedule__title">Графік роботи</h4>
+
+            <ul class="schedule__list">
+              <li class="schedule__item">
+                <span class="schedule__hours">12:00 — 20:00</span>
+                середа
+              </li>
+
+              <li class="schedule__item">
+                <span class="schedule__hours">12:00 — 20:00</span>
+                четвер
+              </li>
+
+              <li class="schedule__item">
+                <span class="schedule__hours">12:00 — 20:00</span>
+                п’ятниця
+              </li>
+
+              <li class="schedule__item">
+                <span class="schedule__hours">11:00 — 19:00</span>
+                субота
+              </li>
+
+              <li class="schedule__item">
+                <span class="schedule__hours">11:00 — 19:00</span>
+                неділя
+              </li>
+            </ul>
+
+            <div class="schedule__non-working">
+              <p class="schedule__text">
+                <span class="schedule__days">Вихідні:</span>
+                понеділок, вівторок
+              </p>
+
+              <p class="schedule__text">
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+
+          <div
+            id="contacts"
+            class="footer__contacts contacts"
+          >
+            <h4 class="contacts__title">Контакти:</h4>
+
+            <ul class="contacts__list">
+              <li class="contacts__item">
+                <a
+                  target="_blank"
+                  href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4ce52445a8315:0x5e30ef474eddac89?sa=X&ved=1t:242&ictx=111"
+                  class="contacts__link"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </li>
+
+              <li class="contacts__item">
+                <a
+                  target="_blank"
+                  href="tel:+380442781357"
+                  class="contacts__link"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+              </li>
+
+              <li class="contacts__item">
+                <a
+                  target="_blank"
+                  href="tel:+380442787454"
+                  class="contacts__link"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+              </li>
+
+              <li class="contacts__item">
+                <a
+                  target="_blank"
+                  href="mailto:info@namu.kiev.ua"
+                  class="contacts__link"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <a
+            href="#home"
+            class="footer__btn-up _icon-arrow-up"
+          ></a>
+
+          <nav class="footer__navigation navigation">
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a
+                  href="#galery"
+                  class="navigation__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a
+                  href="#about"
+                  class="navigation__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a
+                  href="#events"
+                  class="navigation__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a
+                  href="#contacts"
+                  class="navigation__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="footer__copy">
+            <p class="footer__copyright">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+
+            <p class="footer__designed">Designed by Zhyriada Marina</p>
+          </div>
+        </div>
+      </footer>
+    </div>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
