--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,565 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>National Art Museum of Ukraine</title>
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="shortcut icon"
+      href="./images/logo.png"
+      type="image/png"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body id="top">
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="menu__container">
+        <div class="menu__top">
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+          <nav class="menu__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#subscription"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#events"
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="menu__schedule schedule">
+          <h3 class="schedule__title">Графік роботи</h3>
+          <ul class="schedule__worktime">
+            <li class="schedule__item">
+              <span class="schedule__hours">12:00 - 20:00</span>
+              середа
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__hours">12:00 - 20:00</span>
+              четвер
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__hours">12:00 - 20:00</span>
+              п'ятниця
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__hours">11:00 - 19:00</span>
+              субота
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__hours">11:00 - 19:00</span>
+              неділя
+            </li>
+          </ul>
+          <p class="schedule__weekend">
+            <span class="schedule__dayoff">Вихідні:</span>
+            понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+    </aside>
+
+    <header class="header">
+      <div class="header__container">
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        ></a>
+        <div class="header__art">
+          <h2 class="header__logo">
+            na
+            <br />
+            mu
+          </h2>
+        </div>
+        <div class="header__info info info__container">
+          <h1 class="header__title">Художній музей</h1>
+          <a
+            href="#events"
+            class="header__button button"
+          >
+            <p class="header__button-text">квитки</p>
+            <img
+              class="header__button-action button__icon"
+              src="./images/icons/arrow_right.svg"
+              alt="Chevron right"
+            />
+          </a>
+          <div class="header__decor">
+            <div class="header__decor-line"></div>
+            <h3 class="header__decor-title">події</h3>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="main">
+      <section
+        class="events section"
+        id="events"
+      >
+        <h2 class="events__title section__title events__container">
+          Актуальні події
+        </h2>
+
+        <div class="events__content">
+          <article class="events__item events__container">
+            <div class="events__image-wrapper">
+              <img
+                src="./images/events/image01.png"
+                alt="Go and back"
+                class="events__image"
+              />
+            </div>
+            <div class="events__description">
+              <div class="events__data">
+                <div class="events__type">Виставка</div>
+                <div class="events__date">26.08-29.11.2019</div>
+              </div>
+              <div class="events__heading">
+                <h3 class="events__item-title">Йду і повертаюсь</h3>
+              </div>
+              <p class="events__item-text">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </article>
+
+          <article class="events__item events__container">
+            <div class="events__image-wrapper">
+              <img
+                src="./images/events/image02.png"
+                alt="Go and back"
+                class="events__image"
+              />
+            </div>
+            <div class="events__description">
+              <div class="events__data">
+                <div class="events__type">виставка</div>
+                <div class="events__date">26.08-29.11.2019</div>
+              </div>
+              <div class="events__heading">
+                <h3 class="events__item-title">І спогади і мрії</h3>
+              </div>
+              <p class="events__item-text">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+
+          <article class="events__item">
+            <div class="events__image-wrapper events__image-wrapper--changable">
+              <img
+                src="./images/events/image03.png"
+                alt="Go and back"
+                class="events__image"
+              />
+            </div>
+            <div class="events__description events__description--shifted">
+              <div class="events__data">
+                <div class="events__type">Лекція</div>
+                <div class="events__date">26/08/2019 - 11:00</div>
+              </div>
+              <div class="events__heading">
+                <h3 class="events__item-title">Від класицизму до романтизму</h3>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section
+        class="gallery section"
+        id="gallery"
+      >
+        <h2 class="gallery__title section__title">Галерея</h2>
+        <div class="gallery__slider slider">
+          <input
+            type="radio"
+            name="slide"
+            value="1"
+            id="slide-1"
+            class="slide-0"
+            checked
+          />
+          <input
+            type="radio"
+            name="slide"
+            value="2"
+            id="slide-2"
+            class="slide-1"
+          />
+          <input
+            type="radio"
+            name="slide"
+            value="3"
+            id="slide-3"
+            class="slide-2"
+          />
+          <input
+            type="radio"
+            name="slide"
+            value="4"
+            id="slide-4"
+            class="slide-3"
+          />
+
+          <div class="gallery__slides slides">
+            <div class="slide">
+              <img
+                src="./images/gallery/women.png"
+                alt="Women"
+                class="slide__image"
+              />
+            </div>
+            <div class="slide">
+              <img
+                src="./images/gallery/geese.png"
+                alt="Geese"
+                class="slide__image"
+              />
+            </div>
+            <div class="slide">
+              <img
+                src="./images/gallery/colored-sea.png"
+                alt="Colored sea"
+                class="slide__image"
+              />
+            </div>
+            <div class="slide">
+              <img
+                src="./images/gallery/summer-day.png"
+                alt="Summer day"
+                class="slide__image"
+              />
+            </div>
+          </div>
+
+          <div class="gallery__dots dots">
+            <label for="slide-1"></label>
+            <label for="slide-2"></label>
+            <label for="slide-3"></label>
+            <label for="slide-4"></label>
+          </div>
+        </div>
+        <div class="gallery__container">
+          <ul class="gallery__list">
+            <li class="gallery__item gallery__item--1">
+              <img
+                src="./images/gallery/women.png"
+                alt="Women"
+                class="slide__image"
+              />
+            </li>
+            <li class="gallery__item gallery__item--2">
+              <img
+                src="./images/gallery/houses.png"
+                alt="Rural area"
+                class="slide__image"
+              />
+            </li>
+            <li class="gallery__item gallery__item--3">
+              <img
+                src="./images/gallery/summer-day.png"
+                alt="Summer day"
+                class="slide__image"
+              />
+            </li>
+            <li class="gallery__item gallery__item--4">
+              <img
+                src="./images/gallery/colored-sea.png"
+                alt="Colored sea"
+                class="slide__image"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section
+        class="subscription section"
+        id="subscription"
+      >
+        <div class="subscription__container">
+          <h2 class="subscription__title section__title">Підписка</h2>
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            action="#"
+            class="button subscription__form"
+            onsubmit="this.reset(); return false;"
+          >
+            <input
+              type="email"
+              name="email"
+              class="subscription__input"
+              placeholder="E-mail"
+              autocomplete="off"
+              required
+            />
+            <button class="subscription__button-action">
+              <img
+                class="button__icon"
+                src="./images/icons/arrow-right-black.png"
+                alt="Chevron right"
+              />
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer
+      class="footer"
+      id="contacts"
+    >
+      <div class="footer__container">
+        <div class="footer__top">
+          <a
+            class="footer__logo"
+            href="#top"
+          >
+            na
+            <br />
+            mu
+          </a>
+          <div class="footer__socials socials">
+            <a
+              href="https://www.facebook.com/namu.museum/"
+              class="socials__link"
+              target="_blank"
+            >
+              <svg
+                class="socials__icon"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g clip-path="url(#clip0_320_220)">
+                  <path
+                    d="M8.80699 4.64899C8.80699 5.2538 8.80699 7.9533 8.80699 7.9533H6.38992V11.9938H8.80699V24.0009H13.7722V11.9942H17.104C17.104 11.9942 17.4161 10.0568 17.5673 7.93841C17.1337 7.93841 13.7909 7.93841 13.7909 7.93841C13.7909 7.93841 13.7909 5.58776 13.7909 5.17573C13.7909 4.76282 14.3323 4.2074 14.8674 4.2074C15.4014 4.2074 16.5286 4.2074 17.5726 4.2074C17.5726 3.65727 17.5726 1.75647 17.5726 0.000976577C16.1789 0.000976577 14.5933 0.000976577 13.8944 0.000976577C8.68426 0.000697581 8.80699 4.04524 8.80699 4.64899Z"
+                    fill="black"
+                  />
+                </g>
+                <defs>
+                  <clippath id="clip0_320_220">
+                    <rect
+                      width="23.9626"
+                      height="24"
+                      fill="white"
+                    />
+                  </clippath>
+                </defs>
+              </svg>
+            </a>
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              class="socials__link"
+              target="_blank"
+            >
+              <svg
+                class="socials__icon"
+                width="25"
+                height="24"
+                viewBox="0 0 25 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g clip-path="url(#clip0_320_223)">
+                  <path
+                    d="M17.5908 0H6.58397C3.0017 0 0.0874023 2.9143 0.0874023 6.49657V17.5036C0.0874023 21.0857 3.0017 24 6.58397 24H17.591C21.1731 24 24.0874 21.0857 24.0874 17.5036V6.49657C24.0874 2.9143 21.1731 0 17.5908 0V0ZM12.0874 18.5623C8.46886 18.5623 5.52507 15.6185 5.52507 12C5.52507 8.38145 8.46886 5.43767 12.0874 5.43767C15.7059 5.43767 18.6497 8.38145 18.6497 12C18.6497 15.6185 15.7059 18.5623 12.0874 18.5623ZM18.8066 6.98528C17.7373 6.98528 16.8675 6.11553 16.8675 5.04619C16.8675 3.97686 17.7373 3.10693 18.8066 3.10693C19.8759 3.10693 20.7459 3.97686 20.7459 5.04619C20.7459 6.11553 19.8759 6.98528 18.8066 6.98528Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M12.0874 6.84473C9.24487 6.84473 6.93207 9.15734 6.93207 12.0001C6.93207 14.8426 9.24487 17.1554 12.0874 17.1554C14.9301 17.1554 17.2427 14.8426 17.2427 12.0001C17.2427 9.15734 14.9301 6.84473 12.0874 6.84473Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M18.8066 4.51416C18.5133 4.51416 18.2745 4.75293 18.2745 5.04626C18.2745 5.3396 18.5133 5.57837 18.8066 5.57837C19.1001 5.57837 19.3389 5.33978 19.3389 5.04626C19.3389 4.75275 19.1001 4.51416 18.8066 4.51416Z"
+                    fill="black"
+                  />
+                </g>
+                <defs>
+                  <clippath id="clip0_320_223">
+                    <rect
+                      width="24"
+                      height="24"
+                      fill="white"
+                      transform="translate(0.0874023)"
+                    />
+                  </clippath>
+                </defs>
+              </svg>
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__schedule schedule">
+          <h3 class="schedule__title">Графік роботи</h3>
+          <ul class="schedule__worktime">
+            <li class="schedule__item">
+              <span class="schedule__hours">12:00 - 20:00</span>
+              середа
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__hours">12:00 - 20:00</span>
+              четвер
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__hours">12:00 - 20:00</span>
+              п'ятниця
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__hours">11:00 - 19:00</span>
+              субота
+            </li>
+            <li class="schedule__item">
+              <span class="schedule__hours">11:00 - 19:00</span>
+              неділя
+            </li>
+          </ul>
+          <p class="schedule__weekend">
+            <span class="schedule__dayoff">Вихідні:</span>
+            понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+        <div class="footer__contacts">
+          <h3 class="footer__contacts-title">Контакти:</h3>
+          <p class="footer__contacts-text">
+            <span>вул. М. Грушевського, 6;</span>
+            <span>Київ, 01001</span>
+            <span>тел. +38 (044) 278-13-57</span>
+            <span>факс +38 (044) 278-74-54</span>
+            <span>e-mail: info@namu.kiev.ua</span>
+          </p>
+        </div>
+
+        <div class="footer__go-up-wrapper">
+          <a
+            class="footer__go-up"
+            href="#top"
+          >
+            <img
+              src="./images//icons/arrow_up.png"
+              alt="Arrow up"
+            />
+          </a>
+        </div>
+
+        <nav class="footer__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                href="#gallery"
+                class="nav__link"
+              >
+                Галерея
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#subscription"
+                class="nav__link"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#events"
+                class="nav__link"
+              >
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#contacts"
+                class="nav__link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer__bottom">
+          <p class="footer__author">Designed by Zhyriada Marina</p>
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
