--- a/src/index.html
+++ b/src/index.html
@@ -496,11 +496,33 @@
         <div class="footer__contacts">
           <h3 class="footer__contacts-title">Контакти:</h3>
           <p class="footer__contacts-text">
-            <span>вул. М. Грушевського, 6;</span>
-            <span>Київ, 01001</span>
-            <span>тел. +38 (044) 278-13-57</span>
-            <span>факс +38 (044) 278-74-54</span>
-            <span>e-mail: info@namu.kiev.ua</span>
+            <a
+              class="footer__contacts-link"
+              href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6;
+              <br />
+              Київ, 01001
+            </a>
+            <a
+              class="footer__contacts-link"
+              href="tel:+380442781357"
+            >
+              факс +38 (044) 278-13-57
+            </a>
+            <a
+              class="footer__contacts-link"
+              href="tel:+380442787454"
+            >
+              факс +38 (044) 278-74-54
+            </a>
+            <a
+              class="footer__contacts-link"
+              href="mailto:info@namu.kiev.ua"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
           </p>
         </div>
 
